Revert "Updates golang dependencies to match github release notes [#175477041]"
This reverts commit 4d5bc2c69976a9199ad95375c22c63a02186ec31.

--- a/bbr-rn.html.md.erb
+++ b/bbr-rn.html.md.erb
@@ -16,7 +16,7 @@ owner: Release Engineering
 
 #### Fixes
 
-* **Updates all golang dependencies.**
+* **Updates all dependencies.**
 
 
 ### <a id='1-8-0'></a> v1.8.0
