--- a/bbr-rn.html.md.erb
+++ b/bbr-rn.html.md.erb
@@ -5,6 +5,14 @@ owner: Release Engineering
 
 ## <a id='releases'></a> Releases
 
+### <a id='1-9-0'></a> v1.9.0
+
+**Release Date**: November 23, 2020
+
+#### Features
+
+* **New experimental flag: --unsafe-no-lock**  This flag can be used in conjunction with the backup command to create a backup artifact without running the pre/post lock scripts for component databases. Warning - use of this flag can result in an inconsistent backup artifact.
+
 ### <a id='1-8-1'></a> v1.8.1
 
 **Release Date**: October 23, 2020
