--- a/bbr-rn.html.md.erb
+++ b/bbr-rn.html.md.erb
@@ -7,11 +7,16 @@ owner: Release Engineering
 
 ### <a id='1-9-0'></a> v1.9.0
 
-**Release Date**: November 23, 2020
+**Release Date**: December 7, 2020
 
 #### Features
 
-* **New experimental flag: --unsafe-no-lock**  This flag can be used in conjunction with the backup command to create a backup artifact without running the pre/post lock scripts for component databases. Warning - use of this flag can result in an inconsistent backup artifact.
+* **New experimental flag:** You can use the `--unsafe-no-lock`  flag
+with the backup command to create a backup artifact without running the pre and post
+lock scripts for component databases.
+<p class="note warning">
+  <strong>Warning:</strong> Using this flag can result in an inconsistent backup artifact.
+</p>
 
 ### <a id='1-8-1'></a> v1.8.1
 
