Adds new experimental features page.
* Details new --unsafe-lock-free flag
* Corrects flag name previously --unsafe-no-lock in docs

--- a/backup.html.md.erb
+++ b/backup.html.md.erb
@@ -265,7 +265,10 @@ To connect with `BOSH_ALL_PROXY`, follow one of the below procedures:
     * `PATH-TO-BOSH-CA-CERTIFICATE`: The path to the BOSH Director's Certificate Authority (CA)
     certificate, if the certificate is not verifiable by the local machine's certificate chain. If you manually deployed,
     then the certificate might be stored in a `secrets.yml` or similar file.
-    <p class="note"><strong>Note:</strong> To include the manifest in the backup artifact, add the  <code>--with-manifest</code> flag. However, be aware that the backup artifact then includes credentials that you need to keep secret.</p>
+    <p class="note"><strong>Note:</strong> To include the manifest in the backup artifact, add the  <code>--with-manifest</code> flag. However, be aware that the backup artifact then includes credentials that you need to keep secret.
+   </p>
+    <p class="note"><strong>Note:</strong> The <code>--unsafe-lock-free</code> flag should only be used by advanced users, given that its use can result in inconsistent backups. More information on this feature can be viewed [here](experimental-features.html)
+   </p>
 
     For example:
 
