--- a/bbr-rn.html.md.erb
+++ b/bbr-rn.html.md.erb
@@ -11,7 +11,7 @@ owner: Release Engineering
 
 #### Features
 
-* **New experimental flag:** You can use the `--unsafe-no-lock`  flag
+* **New experimental flag:** You can use the `--unsafe-lock-free`  flag
 with the backup command to create a backup artifact without running the pre and post
 lock scripts for component databases.
 <p class="note warning">
